start developing button component

--- a/src/assets/styles/_root.scss
+++ b/src/assets/styles/_root.scss
@@ -30,7 +30,7 @@
         --color-background-100: rgba(43, 56, 75, 1);
         --color-background-200: rgba(7, 22, 44, 1);
 
-        --color-typography-200: rgba(255, 255, 255, 1);
+        //--color-typography-200: rgba(255, 255, 255, 1);
       }
     }
   }
@@ -40,6 +40,6 @@
     --color-background-100: rgba(43, 56, 75, 1);
     --color-background-200: rgba(7, 22, 44, 1);
 
-    --color-typography-200: rgba(255, 255, 255, 1);
+    //--color-typography-200: rgba(255, 255, 255, 1);
   }
 }
