--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -5,3 +5,13 @@
 @import "fonts";
 @import "icons";
 @import "root";
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+html {
+  background: var(--color-background-50);
+}
