--- a/src/assets/styles/_root.scss
+++ b/src/assets/styles/_root.scss
@@ -1,6 +1,6 @@
 @layer base {
   :root {
-    --color-background-50: #F7F9FC;
+    --color-background-50: #FFFFFF;
     --color-background-100: #EBEFF5;
     --color-background-200: #C1CAD7;
     --color-background-300: linear-gradient(314deg, #EBEFF5 2.19%, #F0F4F7 100%);
@@ -28,6 +28,8 @@
 
     --spinner-color: #2868E1;
     --spinner-border-color: #C1CAD7;
+
+    --color-hover: #F7F9FC;
   }
 
   :root[class~="sync"] {
@@ -42,6 +44,8 @@
 
       --spinner-color: #2868E1;
       --spinner-border-color: #2B384B;
+
+      --color-hover: #142237;
     }
   }
 
@@ -56,5 +60,7 @@
 
     --spinner-color: #2868E1;
     --spinner-border-color: #2B384B;
+
+    --color-hover: #142237;
   }
 }
