add input field, refactor dropdown, add generic styles for inputs

--- a/src/assets/styles/_root.scss
+++ b/src/assets/styles/_root.scss
@@ -25,6 +25,7 @@
     --color-brand-accent: #ff562e;
 
     --border-color: #c1cad7;
+    --border-hover-color: #8396B1;
 
     --spinner-color: #2868e1;
     --spinner-border-color: #c1cad7;
