--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -5,6 +5,8 @@
 @import "fonts";
 @import "icons";
 @import "root";
+@import "button";
+@import "inputs";
 
 html,
 body {
@@ -18,25 +20,5 @@ html {
   &.dark,
   &.sync {
       background: var(--color-background-50);
-  }
-}
-
-.button {
-  @apply flex items-center justify-center;
-
-  &-primary {
-    @apply bg-primary-50 text-white hover:bg-primary-100 active:bg-primary-200 disabled:bg-neutral-100 disabled:bg-neutral-100 disabled:text-neutral-typography-50 disabled:border-neutral-100;
-
-    &-loading {
-      @apply pointer-events-none bg-neutral-100 text-neutral-100 #{!important};
-    }
-  }
-
-  &-secondary {
-    @apply border-[1px] border-border-color text-neutral-typography-200 bg-neutral-bg-50 dark:hover:border-neutral-typography-100 dark:active:bg-neutral-bg-50 hover:bg-hover-btn hover:border-neutral-typography-50 active:text-primary-50 active:border-primary-50 dark:active:border-primary-50 active:bg-primary-50/10 disabled:bg-neutral-100 disabled:border-neutral-100 disabled:text-neutral-typography-50 dark:disabled:bg-neutral-bg-50 dark:disabled:text-neutral-typography-50 dark:disabled:border-border-color;
-
-    &-loading {
-      @apply pointer-events-none bg-neutral-100 text-neutral-100 border-neutral-100 dark:bg-neutral-bg-50 dark:text-neutral-bg-50 dark:border-border-color #{!important};
-    }
   }
 }
