--- a/src/assets/styles/_inputs.scss
+++ b/src/assets/styles/_inputs.scss
@@ -4,7 +4,7 @@
   }
 
   &-label {
-      @apply cursor-pointer text-neutral-typography-200 dark:text-neutral-typography-50;
+      @apply text-14 font-medium cursor-pointer text-neutral-typography-200 dark:text-neutral-typography-50;
   }
 
   &-input,
@@ -18,5 +18,21 @@
     &.password {
       @apply text-32 text-transparent text-shadow-password;
     }
+  }
+
+  &-currency {
+    @apply hover:border-border-hover-color rounded-md border-[1px] border-border-color bg-neutral-bg-50 px-3 py-4 pl-4 pr-3 text-neutral-typography-200 outline-none focus:border-primary-50 active:border-primary-50 focus-within:border-primary-50 disabled:bg-neutral-bg-100 disabled:text-neutral-typography-50 disabled:hover:border-border-color dark:disabled:bg-neutral-bg-50;
+  }
+
+  &-currency-label {
+    @apply field-label relative flex gap-1 text-14;
+
+    span {
+      @apply text-[20px];
+    }
+  }
+
+  &-currency-balance {
+      @apply text-12 font-medium cursor-pointer text-neutral-400;
   }
 }
