--- a/src/assets/styles/_inputs.scss
+++ b/src/assets/styles/_inputs.scss
@@ -9,8 +9,8 @@
 
   &-input,
   &-dropdown {
-      @apply flex items-center rounded-md border-[1px] border-border-color hover:border-border-hover-color bg-neutral-bg-50 px-3 text-neutral-typography-200 outline-none active:border-primary-50 focus:border-primary-50 disabled:hover:border-border-color disabled:bg-neutral-bg-100 dark:disabled:bg-neutral-bg-50 disabled:text-neutral-typography-50;
-    transition: 0.3s;
+      @apply flex items-center rounded-md border-[1px] border-border-color hover:border-border-hover-color bg-neutral-bg-50 px-3 text-neutral-typography-200 outline-none active:border-primary-50 focus:border-primary-50 disabled:hover:border-border-color disabled:bg-neutral-bg-100 dark:disabled:bg-neutral-bg-50 disabled:text-neutral-typography-50 transition;
+    //transition: 0.3s;
     height: 44px;
   }
 
@@ -19,12 +19,17 @@
       @apply text-32 text-transparent text-shadow-password;
     }
   }
+}
 
-  &-currency {
-    @apply hover:border-border-hover-color rounded-md border-[1px] border-border-color bg-neutral-bg-50 px-3 py-4 pl-4 pr-3 text-neutral-typography-200 outline-none focus:border-primary-50 active:border-primary-50 focus-within:border-primary-50 disabled:bg-neutral-bg-100 disabled:text-neutral-typography-50 disabled:hover:border-border-color dark:disabled:bg-neutral-bg-50;
+.field-currency {
+  @apply transition hover:border-border-hover-color rounded-md border-[1px] border-border-color bg-neutral-bg-50 px-3 py-4 pl-4 pr-3 text-neutral-typography-200 outline-none focus:border-primary-50 disabled:bg-neutral-bg-100 disabled:text-neutral-typography-50 disabled:hover:border-border-color dark:disabled:bg-neutral-bg-50;
+  @apply focus-within:border-primary-50 #{!important};
+
+  &-wrapper {
+    @apply flex flex-col gap-1;
   }
 
-  &-currency-label {
+  &-label {
     @apply field-label relative flex gap-1 text-14;
 
     span {
@@ -32,7 +37,11 @@
     }
   }
 
-  &-currency-balance {
-      @apply text-12 font-medium cursor-pointer text-neutral-400;
+  &-balance {
+    @apply text-12 font-medium cursor-pointer text-neutral-400;
+  }
+
+  &-error {
+    @apply text-12 text-danger-100 font-medium;
   }
 }
