finish developing tables

--- a/src/assets/styles/_inputs.scss
+++ b/src/assets/styles/_inputs.scss
@@ -30,7 +30,7 @@
   }
 
   &-label {
-    @apply field-label relative flex gap-1 text-14;
+    @apply field-label flex gap-1 text-14;
 
     span {
       @apply text-[20px];
