--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -5,8 +5,10 @@
 @import "fonts";
 @import "icons";
 @import "root";
+@import "variables";
 @import "button";
 @import "inputs";
+@import "tables";
 
 html,
 body {
