change border color in white theme

--- a/src/assets/styles/_root.scss
+++ b/src/assets/styles/_root.scss
@@ -24,7 +24,7 @@
 
     --color-brand-accent: #ff562e;
 
-    --border-color: #EBEFF5;
+    --border-color: #D6DCE4;
     --border-hover-color: #8396B1;
 
     --spinner-color: #2868e1;
