--- a/src/assets/styles/_tables.scss
+++ b/src/assets/styles/_tables.scss
@@ -11,7 +11,7 @@
     transform: translateY(-50%);
   }
 
-  .row-actions:hover .nls-btn-show {
+  .earn-row-actions:hover .nls-btn-show {
     transition: 0.2s;
 
     display: flex;
@@ -29,7 +29,7 @@
     transition: 0.2s opacity;
   }
 
-  .row-actions:hover > div:last-of-type {
+  .earn-row-actions:hover > div:last-of-type {
     opacity: 0;
   }
 }
