--- a/src/assets/styles/_button.scss
+++ b/src/assets/styles/_button.scss
@@ -12,6 +12,8 @@
   &-secondary {
     @apply border-[1px] border-border-color text-neutral-typography-200 bg-neutral-bg-50 dark:hover:border-neutral-typography-100 dark:active:bg-neutral-bg-50 hover:bg-hover-btn hover:border-neutral-typography-50 active:text-primary-50 active:border-primary-50 dark:active:border-primary-50 active:bg-primary-50/10 disabled:bg-neutral-100 disabled:border-neutral-100 disabled:text-neutral-typography-50 dark:disabled:bg-neutral-bg-50 dark:disabled:text-neutral-typography-50 dark:disabled:border-border-color;
 
+
+
     &-loading {
       @apply pointer-events-none bg-neutral-100 text-neutral-100 border-neutral-100 dark:bg-neutral-bg-50 dark:text-neutral-bg-50 dark:border-border-color #{!important};
     }
@@ -19,5 +21,15 @@
 
   &-active {
     @apply dark:bg-neutral-bg-50 dark:border-primary-50 text-primary-50 border-primary-50  bg-primary-50/10;
+  }
+}
+
+:root[class~="sync"] {
+  @media (prefers-color-scheme: dark) {
+    .button {
+      &-secondary {
+        @apply disabled:bg-neutral-bg-50 disabled:text-neutral-typography-50 disabled:border-border-color;
+      }
+    }
   }
 }
