--- a/src/assets/styles/_button.scss
+++ b/src/assets/styles/_button.scss
@@ -29,6 +29,10 @@
     .button {
       &-secondary {
         @apply disabled:bg-neutral-bg-50 disabled:text-neutral-typography-50 disabled:border-border-color;
+
+        &-loading {
+          @apply bg-neutral-800 text-neutral-800 border-border-color #{!important};
+        }
       }
     }
   }
