fix: lease color

--- a/src/assets/styles/_root.scss
+++ b/src/assets/styles/_root.scss
@@ -24,11 +24,12 @@
 
     --color-brand-accent: #ff562e;
 
-    --border-color: #D6DCE4;
-    --border-hover-color: #8396B1;
+    --border-color: #d6dce4;
+    --border-hover-color: #8396b1;
 
     --spinner-color: #2868e1;
     --spinner-border-color: #c1cad7;
+    --color-progress: #ebeff5;
 
     --color-hover: #f7f9fc;
 
@@ -67,6 +68,7 @@
 
     --spinner-color: #2868e1;
     --spinner-border-color: #2b384b;
+    --color-progress: #2b384b;
 
     --color-hover: #142237;
   }
