update: lease progres bar color in sync theme

--- a/src/assets/styles/_root.scss
+++ b/src/assets/styles/_root.scss
@@ -52,6 +52,7 @@
 
       --spinner-color: #2868e1;
       --spinner-border-color: #2b384b;
+      --color-progress: #2b384b;
 
       --color-hover: #142237;
     }
