fix button style

--- a/src/assets/styles/_button.scss
+++ b/src/assets/styles/_button.scss
@@ -32,11 +32,12 @@
           @apply bg-neutral-800 text-neutral-800 border-border-color #{!important};
         }
       }
+
       &-secondary {
         @apply disabled:bg-neutral-bg-50 disabled:text-neutral-typography-50 disabled:border-border-color;
 
         &-loading {
-          @apply bg-neutral-800 text-neutral-800 border-border-color #{!important};
+          @apply pointer-events-none bg-neutral-bg-50 text-neutral-bg-50 border-border-color #{!important};
         }
       }
     }
