--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -17,10 +17,12 @@ body {
 }
 
 html {
-  background: var(--color-background-300);
+  background: #fff;
 
-  &.dark,
+  &.dark { background: #1E242F; }
   &.sync {
-      background: #07162c;
+    @media (prefers-color-scheme: dark) {
+      background: #1E242F;
+    }
   }
 }
