--- a/src/documentation/index.css
+++ b/src/documentation/index.css
@@ -1,16 +1,10 @@
-.sbdocs-content {
-    @apply w-full max-w-full !important;
-    @apply bg-[#171C25];
-}
-
 .nolus-container {
-    @apply flex flex-col w-full justify-center items-center h-full gap-16;
+    @apply bg-[#171C25] flex flex-col w-full justify-center items-center h-full gap-16;
     font-family: "Garet", sans-serif !important;
 }
 
-
 #nolus-title {
-    @apply text-8xl text-white font-semibold;
+    @apply text-5xl text-white font-semibold;
     font-family: "Garet", sans-serif !important;
 }
 
