add missing colors, refactor button component

--- a/src/assets/styles/_button.scss
+++ b/src/assets/styles/_button.scss
@@ -1,45 +1,23 @@
 .button {
-  @apply flex items-center justify-center gap-1;
+  @apply flex items-center justify-center gap-1 disabled:bg-disabled disabled:text-typography-disabled disabled:border-none shadow-medium disabled:hover:bg-disabled disabled:shadow-transparent;
+  // TODO: ask about this state
+  //@apply focus:outline focus:outline-offset-1 focus:outline-primary-hover active:outline-none;
 
   &-primary {
-    @apply bg-primary-50 text-white hover:bg-primary-100 active:bg-primary-200 disabled:bg-neutral-100 disabled:text-neutral-typography-50 disabled:border-neutral-100;
-
-    &-loading {
-      @apply pointer-events-none bg-neutral-100 text-neutral-100 dark:bg-neutral-bg-200 dark:text-neutral-bg-200 dark:border-none #{!important};
-    }
+    @apply bg-primary-default text-static-light hover:bg-primary-hover active:bg-primary-active;
   }
 
   &-secondary {
-    @apply border-[1px] border-border-color text-neutral-typography-200 bg-neutral-bg-50 dark:hover:border-border-color dark:hover:bg-neutral-bg-100 dark:active:bg-neutral-bg-50 hover:bg-hover-btn hover:border-neutral-200 active:text-primary-200 active:border-border-hover-color dark:active:border-primary-50 active:bg-primary-50/10 disabled:bg-neutral-100 disabled:border-neutral-100 disabled:text-neutral-typography-50 dark:disabled:bg-neutral-bg-200 dark:disabled:text-neutral-typography-50 dark:disabled:border-none;
-
-    &-loading {
-      @apply pointer-events-none bg-neutral-100 text-neutral-100 border-neutral-100 dark:bg-neutral-bg-200 dark:text-neutral-bg-200 dark:border-none #{!important};
-    }
+    @apply border-[1px] border-border-default text-typography-default bg-secondary-default hover:bg-secondary-hover active:bg-secondary-active active:border-border-emphasized;
   }
 
-  &-active {
-    @apply dark:bg-neutral-bg-50 dark:border-primary-50 text-primary-50 border-primary-50  bg-primary-50/10;
+  &-loading {
+    @apply pointer-events-none bg-disabled text-disabled border-none shadow-transparent #{!important};
   }
 }
 
 :root[class~="sync"] {
   @media (prefers-color-scheme: dark) {
-    .button {
-      &-primary {
-        @apply disabled:bg-neutral-bg-200 disabled:text-neutral-typography-50 disabled:border-none;
-
-        &-loading {
-          @apply bg-neutral-800 text-neutral-800 border-border-color #{!important};
-        }
-      }
-
-      &-secondary {
-        @apply disabled:bg-neutral-bg-200 disabled:text-neutral-typography-50 disabled:border-none;
-
-        &-loading {
-          @apply pointer-events-none bg-neutral-bg-200 text-neutral-bg-200 border-none #{!important};
-        }
-      }
-    }
+    .button {}
   }
 }
