--- a/src/assets/styles/_root.scss
+++ b/src/assets/styles/_root.scss
@@ -8,10 +8,6 @@
     --color-typography-50: #8396B1;
     --color-typography-100: #4C5A6E;
     --color-typography-200: #273141;
-    --color-typography-link: #2054B5;
-    --color-typography-error: #AB1F3B;
-    --color-typography-success: #0F6641;
-    --color-typography-brand: #CF4625;
 
     --color-primary-50: #3470E2;
     --color-primary-100: #245DC8;
@@ -44,6 +40,79 @@
     --media-query-xxl: 1400px;
 
     --swap-confirmation-color: #f7f9fc;
+
+    // new colors
+    --color-typography-default: #273141;
+    --color-typography-secondary: #4C5A6E;
+    --color-typography-disabled: #8396b1;
+    --color-typography-link: #2054b5;
+    --color-typography-error: #ab1f3b;
+    --color-typography-success: #0f6641;
+    --color-typography-brand: #cf4625;
+
+    --color-icon-default: #566479;
+    --color-icon-secondary: #8396b1;
+    --color-icon-disabled: #8396b1;
+    --color-icon-link: #3470e2;
+    --color-icon-error: #df294d;
+    --color-icon-success: #148555;
+    --color-icon-brand: #ff5f3a;
+    --color-icon-inverted: #FFFFFF;
+    --color-icon-static-light: #FFFFFF;
+    --color-icon-static-dark: #273141;
+
+    --color-background-level-1: #f7f9fc;
+    --color-background-level-2: #ffffff;
+    --color-background-level-3: #ebeff5;
+    --color-background-level-4: #c1cad7;
+    --color-background-level-inverted-2: #384354;
+    --color-background-level-inverted-1: #171c25;
+
+    --color-primary-default: #3470e2;
+    --color-primary-hover: #245DC8;
+    --color-primary-active: #2054B5;
+
+    --color-secondary-default: #FFFFFF;
+    --color-secondary-hover: #F7F9FC;
+    --color-secondary-active: #C1CAD7;
+
+    --color-danger-default: #FFFFFF;
+    --color-danger-hover: #fceaee;
+    --color-danger-active: #f6b9c5;
+
+    --color-disabled: #ebeff5;
+
+    --color-static-light: #FFFFFF;
+
+    --color-info-muted: #e8effc;
+
+    --color-success-muted: #DDF3EA;
+    --color-success-emphasized: #148555;
+
+    --color-warning-muted: #ffeec9;
+    --color-warning-emphasized: #e4a61e;
+
+    --color-error-muted: #fceaee;
+    --color-error-emphasized: #ab1f3b;
+
+    --color-logo: #072D63;
+
+    --color-dackdrop: rgba(23, 28, 37, 0.5);
+
+    --color-scrollbar: rgba(86, 100, 121, 0.3);
+
+    --color-border-muted: #ebeff5;
+    --color-border-default: #c1cad7;
+    --color-border-emphasized: #a4b2c5;
+    --color-border-dominant: #8396b1;
+    --color-border-focus: #3470e2;
+    --color-border-success: #148555;
+    --color-border-error: #df294d;
+    --color-border-warning: #c08b1a;
+
+    --color-shadow-default: rgba(0, 0, 0, 0.10);
+    --color-shadow-light: rgba(0, 0, 0, 0.075);
+    --color-shadow-lighter: rgba(0, 0, 0, 0.05);
   }
 
   :root[class~="sync"] {
@@ -55,10 +124,6 @@
       --color-typography-50: #66768E;
       --color-typography-100: #C1CAD7;
       --color-typography-200: #F7F9FC;
-      --color-typography-link: #B5CAF5;
-      --color-typography-error: #F6B9C5;
-      --color-typography-success: #8CD8B8;
-      --color-typography-brand: #FF5F3A;
 
       --color-primary-100: #6793EA;
       --color-primary-200: #245DC8;
@@ -73,6 +138,77 @@
       --color-hover: #142237;
 
       --swap-confirmation-color: #2b384b;
+
+      // new colors
+      --color-typography-default: #f7f9fc;
+      --color-typography-secondary: #c1cad7;
+      --color-typography-disabled: #66768e;
+      --color-typography-link: #B5CAF5;
+      --color-typography-error: #F6B9C5;
+      --color-typography-success: #8CD8B8;
+      --color-typography-brand: #FF5F3A;
+
+      --color-icon-default: #ebeff5;
+      --color-icon-secondary: #8396b1;
+      --color-icon-disabled: #566479;
+      --color-icon-link: #6793ea;
+      --color-icon-error: #ed6983;
+      --color-icon-success: #19a96c;
+      --color-icon-brand: #ff5f3a;
+      --color-icon-inverted: #273141;
+      --color-icon-static-light: #FFFFFF;
+      --color-icon-static-dark: #273141;
+
+      --color-background-level-1: #171c25;
+      --color-background-level-2: #1E242F;
+      --color-background-level-3: #273141;
+      --color-background-level-4: #4c5a6e;
+      --color-background-level-inverted-2: #ebeff5;
+      --color-background-level-inverted-1: #ffffff;
+
+      --color-primary-default: #3470E2;
+      --color-primary-hover: #6793ea;
+      --color-primary-active: #245dc8;
+
+      --color-secondary-default: #171c25;
+      --color-secondary-hover: #273141;
+      --color-secondary-active: #384354;
+
+      --color-danger-default: #171c25;
+      --color-danger-hover: #81182c;
+      --color-danger-active: #ab1f3b;
+
+      --color-disabled: #384354;
+
+      --color-info-muted: #122f63;
+
+      --color-success-muted: #083824;
+      --color-success-emphasized: #0f6641;
+
+      --color-warning-muted: #402e09;
+      --color-warning-emphasized: #c08b1a;
+
+      --color-error-muted: #611221;
+      --color-error-emphasized: #81182c;
+
+      --color-logo: #ffffff;
+
+      --color-dackdrop: rgba(23, 28, 37, 0.75);
+
+      --color-scrollbar: rgba(193, 202, 215, 0.3);
+
+      --color-border-muted: #384354;
+      --color-border-default: #384354;
+      --color-border-emphasized: #66768e;
+      --color-border-dominant: #8396b1;
+      --color-border-focus: #6793ea;
+      --color-border-success: #19a96c;
+      --color-border-error: #ed6983;
+      --color-border-warning: #c08b1a;
+
+      --color-shadow-default: rgba(0, 0, 0, 0.20);
+      --color-shadow-light: rgba(0, 0, 0, 0.15);
+      --color-shadow-lighter: rgba(0, 0, 0, 0.10);
     }
   }
 
@@ -102,5 +238,72 @@
     --color-hover: #142237;
 
     --swap-confirmation-color: #2b384b;
+
+    // new colors
+    --color-typography-default: #f7f9fc;
+    --color-typography-secondary: #c1cad7;
+    --color-typography-disabled: #66768e;
+
+    --color-icon-default: #ebeff5;
+    --color-icon-secondary: #8396b1;
+    --color-icon-disabled: #566479;
+    --color-icon-link: #6793ea;
+    --color-icon-error: #ed6983;
+    --color-icon-success: #19a96c;
+    --color-icon-brand: #ff5f3a;
+    --color-icon-inverted: #273141;
+    --color-icon-static-light: #FFFFFF;
+    --color-icon-static-dark: #273141;
+
+    --color-background-level-1: #171c25;
+    --color-background-level-2: #1E242F;
+    --color-background-level-3: #273141;
+    --color-background-level-4: #4c5a6e;
+    --color-background-level-inverted-2: #ebeff5;
+    --color-background-level-inverted-1: #ffffff;
+
+    --color-primary-default: #3470E2;
+    --color-primary-hover: #6793ea;
+    --color-primary-active: #245dc8;
+
+    --color-secondary-default: #171c25;
+    --color-secondary-hover: #273141;
+    --color-secondary-active: #384354;
+
+    --color-danger-default: #171c25;
+    --color-danger-hover: #81182c;
+    --color-danger-active: #ab1f3b;
+
+    --color-disabled: #384354;
+
+    --color-info-muted: #122f63;
+
+    --color-success-muted: #083824;
+    --color-success-emphasized: #0f6641;
+
+    --color-warning-muted: #402e09;
+    --color-warning-emphasized: #c08b1a;
+
+    --color-error-muted: #611221;
+    --color-error-emphasized: #81182c;
+
+    --color-logo: #ffffff;
+
+    --color-dackdrop: rgba(23, 28, 37, 0.75);
+
+    --color-scrollbar: rgba(193, 202, 215, 0.3);
+
+    --color-border-muted: #384354;
+    --color-border-default: #384354;
+    --color-border-emphasized: #66768e;
+    --color-border-dominant: #8396b1;
+    --color-border-focus: #6793ea;
+    --color-border-success: #19a96c;
+    --color-border-error: #ed6983;
+    --color-border-warning: #c08b1a;
+
+    --color-shadow-default: rgba(0, 0, 0, 0.20);
+    --color-shadow-light: rgba(0, 0, 0, 0.15);
+    --color-shadow-lighter: rgba(0, 0, 0, 0.10);
   }
 }
