--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -15,6 +15,26 @@ html,
 body {
   width: 100%;
   height: 100%;
+
+  & {
+    scrollbar-color: #5664794C transparent;
+  }
+
+  //&::-webkit-scrollbar-track {
+  //  background-color: transparent;
+  //}
+  //
+  //&::-webkit-scrollbar {
+  //  width: 4px;
+  //  height: 4px;
+  //  background-color: #f5f5f5;
+  //}
+  //
+  //&::-webkit-scrollbar-thumb {
+  //  background-color: #c1cad7;
+  //  border: solid 1px white;
+  //  border-radius: 4px;
+  //}
 }
 
 html {
