refactor popover, dialog, add new styles

--- a/src/assets/styles/_root.scss
+++ b/src/assets/styles/_root.scss
@@ -71,6 +71,7 @@
     --color-background-level-4: #c1cad7;
     --color-background-level-inverted-2: #384354;
     --color-background-level-inverted-1: #171c25;
+    --color-background-level-inverted-1-50: rgba(23, 28, 37, 0.5);
 
     --color-primary-default: #3470e2;
     --color-primary-hover: #245DC8;
@@ -171,6 +172,7 @@
       --color-background-level-4: #4c5a6e;
       --color-background-level-inverted-2: #ebeff5;
       --color-background-level-inverted-1: #ffffff;
+      --color-background-level-inverted-1-50: rgba(255, 255, 255, 0.5);
 
       --color-primary-default: #3470E2;
       --color-primary-hover: #6793ea;
@@ -271,6 +273,7 @@
     --color-background-level-4: #4c5a6e;
     --color-background-level-inverted-2: #ebeff5;
     --color-background-level-inverted-1: #ffffff;
+    --color-background-level-inverted-1-50: rgba(255, 255, 255, 0.5);
 
     --color-primary-default: #3470E2;
     --color-primary-hover: #6793ea;
