--- a/src/assets/styles/_custom.scss
+++ b/src/assets/styles/_custom.scss
@@ -1,7 +1,9 @@
-$prefix: 'nls-';
-
 .nls- {
   &focus {
     @apply focus-visible:outline focus-visible:outline-offset-1 focus-visible:outline-primary-hover active:outline-none;
   }
+}
+
+label {
+  @apply cursor-pointer;
 }
