--- a/src/assets/styles/_inputs.scss
+++ b/src/assets/styles/_inputs.scss
@@ -4,7 +4,7 @@
   }
 
   &-label {
-      @apply text-14 font-normal cursor-pointer text-typography-default;
+      @apply text-14 font-normal cursor-pointer text-typography-default w-max;
   }
 
   &-input,
