--- a/src/assets/styles/_root.scss
+++ b/src/assets/styles/_root.scss
@@ -12,6 +12,7 @@
     --color-primary-50: #2868e1;
     --color-primary-100: #245dc7;
     --color-primary-200: #1f51ad;
+    --color-primary-300: #2868e1;
 
     --color-danger-50: #e4292926;
     --color-danger-100: #e42929;
@@ -49,6 +50,7 @@
       --color-background-50: #142237;
       --color-background-100: #2b384b;
       --color-background-200: #07162c;
+      --color-primary-300: #ffffff;
 
       --color-typography-200: #ffffff;
 
@@ -70,6 +72,7 @@
     --color-background-50: #142237;
     --color-background-100: #2b384b;
     --color-background-200: #07162c;
+    --color-primary-300: #ffffff;
 
     --color-typography-200: #ffffff;
 
