--- a/src/assets/styles/_custom.scss
+++ b/src/assets/styles/_custom.scss
@@ -7,3 +7,29 @@
 label {
   @apply cursor-pointer;
 }
+
+.scroll-bar {
+  &::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+
+  /* Track */
+  &::-webkit-scrollbar-track {
+    background: #ebeff5;
+    opacity: 0.2;
+    border-radius: 4px;
+  }
+
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    background-color: gray;
+    border: solid 1px #ebeff5;
+    border-radius: 4px;
+  }
+
+  /* Handle on hover */
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: gray;
+  }
+}
