--- a/src/assets/styles/_custom.scss
+++ b/src/assets/styles/_custom.scss
@@ -33,3 +33,23 @@ label {
     background-color: gray;
   }
 }
+
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOutAnimation {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
